Fixed spacing issues for different screen sizes

--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,15 @@ body {
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-bottom: 150px;
-    justify-content: space-between;
-    align-items: center;
-  }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 150px;
+  margin-top: 100px;
+  text-align: center;
+}
 
 #header-box {
   display: flex;
@@ -46,6 +48,7 @@ font-size: 28px;
     height: 200px;
     border: 3px solid black;
     border-radius: 25px;
+    margin-right: 100px;
   }
 
   .section-header {
@@ -96,6 +99,7 @@ font-size: 28px;
   background: linear-gradient(to right, transparent, black, transparent);
   border: none;
   margin-top: 35px;
+  margin-bottom: 35px;
 }
 
 #kmeans {
